# DBus-Permission-Manager

./: CMakeLists.txt  README.md
application/: CMakeLists.txt
application/src/: main.cpp
com.system.permissions/: CMakeLists.txt
com.system.permissions/src/: permissions_service.cpp
com.system.time/: CMakeLists.txt
com.system.time/src/: time_service.cpp
src/: permissions_service.cpp
